--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,16 @@
+<ul>
+  <% @products.each do |product| %>
+    <%= render partial: "products", locals: {product: product} %>
+  <% end %>
+</ul>
 
+<script type="text/javascript">
+  $(function () {
+    $(".js-more").on('click', function(){
+      let id = $(this).data("id");
+      $.get(`products/${id}/description`, function(data){
+        $(`#description-${id}`).text(data);
+      });
+    });
+  });
+</script>
