--- a/app/views/products/_products.html.erb
+++ b/app/views/products/_products.html.erb
@@ -1,8 +1,3 @@
 <h3><%= product.name %></h3>
-<div id="description-<%= product.id %>"><%= truncate product.description %></div>
-<% if product.inventory > 0%>
-  <div>Available</div>
-<% else %>
-  <div>Sold Out</div>
-<% end %>
-<button id="More Info" class="js-more" data-id="<%= product.id %>">More Info</button>
+<div id="body-<%= product.id %>"><%= truncate product.description %></div>
+<button class="js-more" data-id="<%= product.id %>">More Info</button>
