--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,15 +1,13 @@
-<ul>
-  <% @products.each do |product| %>
-    <%= render partial: "products", locals: {product: product} %>
-  <% end %>
-</ul>
+<% @products.each do |product| %>
+  <%= render partial: "products", locals: {product: product} %>
+<% end %>
 
 <script type="text/javascript">
-  $(function () {
-    $(".js-more").on('click', function(){
-      let id = $(this).data("id");
-      $.get(`products/${id}/description`, function(data){
-        $(`#description-${id}`).text(data);
+  $(".js-more").on('click', function(){
+    let id = $(this).data("id");
+    $.get(`products/${id}/description`, function(description){
+      $.get(`products/${id}/inventory`, function(inventory){
+        $(`#body-${id}`).text(description + " - " + (JSON.parse(inventory) ? "Available" : "Sold Out"));
       });
     });
   });
