--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,7 @@
     let id = $(this).data("id");
     $.get(`products/${id}/description`, function(description){
       $.get(`products/${id}/inventory`, function(inventory){
-        $(`#body-${id}`).text(description + " - " + (JSON.parse(inventory) ? "Available" : "Sold Out"));
+        $(`#body-${id}`).text(description + " | " + (JSON.parse(inventory) ? "Available" : "Sold Out"));
       });
     });
   });
