--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,13 +1,23 @@
-<h1>Products</h1>
+<% @products.each do |product| %>
+    <h2><%= product.name %></h2>
+    <div id="body-<%= product.id %>"><%= truncate product.description %></div>
+    <button class="js-more" data-id="<%= product.id %>">More Info</button>
+<% end %>
 
-<ul>
-	<% @products.each do |product| %>
-			<li>
-				<%= product.name %>
-				<div id="product-<%= product.id %>">
-					<%= truncate product.description %>
-				</div>
-				<button class="js-more" data-id="<%= product.id %>" name="More Info">More Info</button>
-			</li>
-	<% end %>
-</ul>
+<script type="text/javascript" charset="utf-8">
+$(function() {
+    $(".js-more").on('click', function() {
+        var id = $(this).data("id");
+        $.get("/products/" + id + "/description", function(data) {
+            $("#body-" + id).text(data);
+        });
+        $.get("/products/" + id + "/inventory", function(data) {
+            if (data == "true") {
+                $("#body-" + id).append("<div>" + "Available" + "</div>")
+            } else {
+                $("#body-" + id).append("<div>" + "Sold Out" + "</div>")
+            }
+        });
+    });
+});
+</script>
