--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,1 +1,4 @@
+<h1><%= product.id %>: <%= product.title %></h1>
+<div id="description-<%= product.id %>"><%= truncate product.description %></div>
 
+<button class="js more" data-id="<%product.id %>">More...</button>
