--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,16 +1,26 @@
 <% @products.each do |product| %>
-    <%= render partial: "product", locals: {product: product} %>
+  <h1><%= product.id %>: <%= product.name %></h1>
+  <div id="body-<%= product.id %>"><%= truncate product.description %></div>
+  
+  <button class="js-more" data-id="<%product.id %>">More Info</button>
   <% end %>
   
   <script type="text/javascript" charset="utf-8">
   $(function () {
     $(".js-more").on('click', function() {
-      let id = $(this).data("id");
-      $.get("/products/" + id + "description",);
-      $.get("/products/" + id + "inventory") {function(data) {
-        $("#description-" + id).text(data);
+      var id = $(this).data("id");
+      $.get(`/products/#{id}/description`), function(data)  {
+        $("#body-" + id).text(data);
       });
-    });
   });
+
+});
+    
+
+      
+       
+      # $.get("/products/" + id + "/inventory") {function(data) {
+        
+      # });
   </script>
 
