--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -3,6 +3,6 @@
     <td><%= product.id %></td>
     <td><%= product.name %></td>
     <td id='product-<%=product.id%>'><%= truncate product.description %>
-      <button class='js-more' id='More Info' data-id='<%=product.id%>'>More info</button></td>
+      <button class="js-more" id="More Info" data-id='<%=product.id%>'>More info</button></td>
     <td id='product-<%=product.id%>-available'></td>
   </tr>
