--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,7 +11,7 @@
 
   <script type="text/javascript" charset="utf-8">
   $(function () {
-    $(".js-more").on('click', function() {
+    $(".js-more").on("click", function() {
       // get the id from the data attribute
       let id = $(this).data("id");
       $.get("/products/" + id + "/description", function(data) {
