--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,26 +1,17 @@
+  
 <% @products.each do |product| %>
-  <h1><%= product.id %>: <%= product.name %></h1>
-  <div id="body-<%= product.id %>"><%= truncate product.description %></div>
+  <%= render partial: "product", locals: {product: product} %>
+<% end %>
   
-  <button class="js-more" data-id="<%product.id %>">More Info</button>
-  <% end %>
-  
-  <script type="text/javascript" charset="utf-8">
-  $(function () {
-    $(".js-more").on('click', function() {
-      var id = $(this).data("id");
-      $.get(`/products/#{id}/description`), function(data)  {
-        $("#body-" + id).text(data);
-      });
+<script type="text/javascript">
+  $(".js-more").on('click', function(){
+    var id = $(this).data("id");
+    $.get(`products/${id}/description`, function(description){
+      $.get(`products/${id}/inventory`, function(inventory){
+        $(`#body-${id}`).text(description + (JSON.parse(inventory) ? "Availabe" : "Sold Out"));
+      console.log(inventory)});
+    });
   });
+</script>
 
-});
-    
-
-      
-       
-      # $.get("/products/" + id + "/inventory") {function(data) {
-        
-      # });
-  </script>
 
